# hlk-ld2460-presence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: hardware-enclosure-notes.md
docs/datasheets/: README.md
docs/superpowers/plans/: 2026-06-09-ld2460-enclosure.md  2026-06-09-ld2460-presence-decoder.md  2026-06-10-presence-dashboard-server.md
docs/superpowers/specs/: 2026-06-09-ld2460-enclosure-design.md  2026-06-09-ld2460-presence-decoder-design.md  2026-06-10-presence-dashboard-server-design.md
enclosure/: README.md  ld2460_case.scad
ld2460/: __init__.py  __main__.py  app.py  model.py  protocol.py  tracking.py  transport.py
ld2460/reporters/: __init__.py  console.py  http_reporter.py
ld2460/server/: __init__.py  __main__.py  app.py  registry.py
ld2460/server/static/: app.js  index.html  style.css
tests/: conftest.py  test_app.py  test_cli.py  test_cli_http.py  test_enclosure.py  test_frontend.py  test_http_reporter.py  test_model.py  test_package_api.py  test_protocol.py  test_registry.py  test_reporters.py  test_server.py  test_tracking.py
